-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 21, 22
-
Component/s: hotspot
-
b05
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8311376 | 21.0.1 | Tobias Hartmann | P2 | Resolved | Fixed | b02 |
| JDK-8311237 | 21 | Tobias Hartmann | P2 | Resolved | Fixed | b30 |
An OOME thrown when trying to resolve the VMSupport class in the process of translating an exception to/from the HotSpot heap from/to the libgraal heap cause the VM to exit. For example:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S105670/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/343e7bfd-9479-4364-8b2d-73c5c4318fbf/runs/a24f1bdd-aeda-4a23-ab67-843dd4397358/workspace/open/src/hotspot/share/jvmci/jvmciEnv.cpp:395), pid=3185151, tid=3185166
# Error: guarantee(!HAS_PENDING_EXCEPTION) failed
Stack: [0x0000ffff9c4ad000,0x0000ffff9c8a9000], sp=0x0000ffff9c8a5e40, free space=4067k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xf7afe4] ExceptionTranslation::doit(JavaThread*)+0x624 (jvmciEnv.cpp:395)
V [libjvm.so+0xf63ad0] JVMCIEnv::~JVMCIEnv() [clone .part.0]+0x240 (jvmciEnv.cpp:494)
V [libjvm.so+0xf18778] c2v_lookupType(JNIEnv_*, _jobject*, _jstring*, _jobject*, long, unsigned char)+0x228 (jvmciCompilerToVM.cpp:636)
C [libjvmcicompiler.so+0xef71c4] jdk.vm.ci.hotspot.HotSpotResolvedJavaType* jdk.vm.ci.hotspot.CompilerToVM::lookupType(java.lang.String*, jdk.vm.ci.hotspot.HotSpotResolvedObjectTypeImpl*, long, bool)+0x294
Time: Fri Jun 23 08:10:51 2023 UTC elapsed time: 0.717002 seconds (0d 0h 0m 0s)
Internal exceptions (2 events):
Event: 0.590 Thread 0x0000ffff981b5e30 Exception <a 'java/lang/OutOfMemoryError'{0x00000000ff01c130}> (0x00000000ff01c130)
thrown [/opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S105670/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/343e7bfd-9479-4364-8b2d-73c5c4318fbf/runs/a24f1bdd-aeda-4a23-ab67-843dd4397358/workspace/open/src/hotspot/share/gc/shared/memAllocator.cpp, line 136]
Event: 0.713 Thread 0x0000ffff981b5e30 Exception <a 'java/lang/OutOfMemoryError'{0x00000000ff01be58}> (0x00000000ff01be58)
thrown [/opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S105670/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/343e7bfd-9479-4364-8b2d-73c5c4318fbf/runs/a24f1bdd-aeda-4a23-ab67-843dd4397358/workspace/open/src/hotspot/share/gc/shared/memAllocator.cpp, line 136]
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S105670/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/343e7bfd-9479-4364-8b2d-73c5c4318fbf/runs/a24f1bdd-aeda-4a23-ab67-843dd4397358/workspace/open/src/hotspot/share/jvmci/jvmciEnv.cpp:395), pid=3185151, tid=3185166
# Error: guarantee(!HAS_PENDING_EXCEPTION) failed
Stack: [0x0000ffff9c4ad000,0x0000ffff9c8a9000], sp=0x0000ffff9c8a5e40, free space=4067k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xf7afe4] ExceptionTranslation::doit(JavaThread*)+0x624 (jvmciEnv.cpp:395)
V [libjvm.so+0xf63ad0] JVMCIEnv::~JVMCIEnv() [clone .part.0]+0x240 (jvmciEnv.cpp:494)
V [libjvm.so+0xf18778] c2v_lookupType(JNIEnv_*, _jobject*, _jstring*, _jobject*, long, unsigned char)+0x228 (jvmciCompilerToVM.cpp:636)
C [libjvmcicompiler.so+0xef71c4] jdk.vm.ci.hotspot.HotSpotResolvedJavaType* jdk.vm.ci.hotspot.CompilerToVM::lookupType(java.lang.String*, jdk.vm.ci.hotspot.HotSpotResolvedObjectTypeImpl*, long, bool)+0x294
Time: Fri Jun 23 08:10:51 2023 UTC elapsed time: 0.717002 seconds (0d 0h 0m 0s)
Internal exceptions (2 events):
Event: 0.590 Thread 0x0000ffff981b5e30 Exception <a 'java/lang/OutOfMemoryError'{0x00000000ff01c130}> (0x00000000ff01c130)
thrown [/opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S105670/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/343e7bfd-9479-4364-8b2d-73c5c4318fbf/runs/a24f1bdd-aeda-4a23-ab67-843dd4397358/workspace/open/src/hotspot/share/gc/shared/memAllocator.cpp, line 136]
Event: 0.713 Thread 0x0000ffff981b5e30 Exception <a 'java/lang/OutOfMemoryError'{0x00000000ff01be58}> (0x00000000ff01be58)
thrown [/opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S105670/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/343e7bfd-9479-4364-8b2d-73c5c4318fbf/runs/a24f1bdd-aeda-4a23-ab67-843dd4397358/workspace/open/src/hotspot/share/gc/shared/memAllocator.cpp, line 136]
- backported by
-
JDK-8311237 guarantee(!HAS_PENDING_EXCEPTION) failed in ExceptionTranslation::doit
-
- Resolved
-
-
JDK-8311376 guarantee(!HAS_PENDING_EXCEPTION) failed in ExceptionTranslation::doit
-
- Resolved
-
- relates to
-
JDK-8313899 JVMCI exception Translation can fail in TranslatedException.<clinit>
-
- Resolved
-
- links to
-
Commit
openjdk/jdk21/6de4e8f6
-
Commit
openjdk/jdk/f6bdccb4
-
Review
openjdk/jdk21/91
-
Review
openjdk/jdk/14641
(2 links to)