8310829: guarantee(!HAS_PENDING_EXCEPTION) failed in ExceptionTranslation::doit

Reviewed-by: chagedorn
Backport-of: f6bdccb45caca0f69918a773a9ad9b2ad91b702f